--- a/src/_includes/components/comments.webc
+++ b/src/_includes/components/comments.webc
@@ -4,7 +4,7 @@
             Comment Rules
         </summary>
         <div>
-{% markdown %}
+{% renderTemplate "md" %}
 By submitting a comment, you agree to uphold the [Prism Launcher Code of Conduct](prismlauncher.org/wiki/overview/code-of-conduct/).
 
 ✅ What user-contributed comments are for
@@ -28,7 +28,7 @@ Comments not following the above rules will be removed.
 ### Licensing of user-contributed comments
 
 Launcher contributors may occasionally go through the comments and may incorporate information from them in the documentation. By submitting a comment, you accept that it may be incorporated in unmodified or modified form in the launcher and/or documentation, subject to the [GPL-3.0 license](https://github.com/PrismLauncher/PrismLauncher/blob/develop/LICENSE) for the launcher and [AGPL-3.0 license](https://github.com/PrismLauncher/prismlauncher.org?tab=AGPL-3.0-1-ov-file#readme) for the documentation.
-{% endmarkdown %}
+{% endrenderTemplate %}
             </div>
         </details>
     <div class="giscus"></div>
