--- a/src/_includes/layouts/wiki.njk
+++ b/src/_includes/layouts/wiki.njk
@@ -17,7 +17,7 @@ templateClass: tmpl-wiki
 
     {% endif %}
     {% if comments != false %}
-      {% include "partials/comments.njk" %}
+      {% include "components/comments.webc" %}
 
       <script src="https://giscus.app/client.js"
         data-repo="PrismLauncher/prismlauncher.org"
