--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -26,7 +26,7 @@ templateClass: tmpl-post
   {%- endif %}
 
   {% if comments != false %}
-    {% include "partials/comments.njk" %}
+    {% include "components/comments.webc" %}
     <script src="https://giscus.app/client.js"
         data-repo="PrismLauncher/prismlauncher.org"
         data-repo-id="R_kgDOIPwAOw"
