--- a/src/download/stable/index.njk
+++ b/src/download/stable/index.njk
@@ -12,7 +12,7 @@ eleventyComputed:
     if (!url.pathname.endsWith("/")) {
       url.pathname += "/"; // if there isn't a slash, add it
     }
-    url.pathname += "stable/"; // always prepend /stable/
+    url.pathname += "stable/";
     url.pathname += path;
   }
 
